--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@simpleview/sv-graphql-client": "^4.0.0"
+    "@simpleview/sv-graphql-client": "4.0.0"
   }
 }
