--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rd-training-client-1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "@simpleview/sv-graphql-client": "4.0.0"
